Fix: hero background overlapping text

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -28,6 +28,7 @@ $font-weight-bold: 500;
   top: 20%;
   right: 0;
   border-radius: 20rem 0 0 20rem;
+  z-index: -1;
 }
 
 //4. Animations
