--- a/scss/style.scss
+++ b/scss/style.scss
@@ -658,11 +658,11 @@ body {
     }
 
     li a {
-      padding: 2rem 0;
+      padding: 1rem 0;
       display: block;
       width: 100%;
       text-align: center;
-      font-size: 20px;
+      font-size: $font-size;
       text-transform: uppercase;
     }
     .btn {
